kustomize/bases/forgejo/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/version: "9.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: forgejo
      app.kubernetes.io/component: application
      app.kubernetes.io/instance: forgejo
  template:
    metadata:
      # These are not needed by considered a good practice
      labels:
        app.kubernetes.io/name: forgejo
        app.kubernetes.io/component: application
        app.kubernetes.io/part-of: forgejo
        app.kubernetes.io/instance: forgejo
        app.kubernetes.io/version: "9.0.1"
    spec:
      securityContext:
        # runAsUser: 1000
        # runAsGroup: 1000
        # fsGroup: 1000
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:9.0.1
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 128Gi
        storageClassName: longhorn-retain
